--- a/no bootstrap/css/style.css
+++ b/no bootstrap/css/style.css
@@ -60,6 +60,8 @@
 
 #loginform #fields .datafield {
     width: 100%;
+    background-color: white;
+    color: black;
     border-radius: 5px 5px 0 0;
     border-bottom: solid 2px rgb(44, 240, 247);
     transition: 0.3s;
@@ -97,9 +99,10 @@ p {
     background: #ffd6d6 url(../img/error.png) no-repeat 98% center;
     box-shadow: 0 0 5px #FF5252;
     border-bottom: solid 2px red !important;
+    -webkit-text-fill-color: red !important;
 }
 
-.error:focus {
+#loginform fieldset #fields .error:focus {
     transform: scale(1.1);
     transition: 0.3s ease-in-out;
 }
