--- a/node/public/stylesheets/style.css
+++ b/node/public/stylesheets/style.css
@@ -1,8 +1,11 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-a {
-  color: #00B7FF;
+body {
+    margin-top: 10%;
+    display: flex;
+    justify-content: center;
 }
