--- a/node/views/error.ejs
+++ b/node/views/error.ejs
@@ -8,7 +8,7 @@
     <script src="javascripts/error.js"></script>
 
     <script src="javascripts/jQuery/jquery-3.3.1.min.js"></script>
-    <title>404</title>
+    <title>Error</title>
 </head>
 
 <body>
