--- a/node/views/index.ejs
+++ b/node/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Home</title>
+    <title><%= title %></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,15 +13,22 @@
 
 <body>
     <nav>
-        <%= logged %>
+    <% if(!logged){ %>
+        <%- include('nav') %>
+    <% }else { %>
+        <% if(role ==='client'){ %>
+            <%- include('user/nav') %>
+        <% } if(role ==='admin') {%>
+            <%- include('admin/nav') %>
+    <% }} %>
     </nav>
     <main>
-
+    <%- include(page) %>
     </main>
     <footer>
-
+    <%= logged %>
+        <%- include('footer') %>
     </footer>
-    <script src="javascripts/main.js"></script>
 </body>
 
 </html>
