--- a/node/public/stylesheets/style.css
+++ b/node/public/stylesheets/style.css
@@ -4,8 +4,45 @@
     padding: 0;
 }
 
+html,
 body {
-    margin-top: 10%;
+    height: 100%;
+}
+
+main {
     display: flex;
     justify-content: center;
+    margin-top: 50px
+}
+
+nav.tabs {
+    display: flex;
+    background: white;
+    box-shadow: 0px -2px 35px black;
+}
+
+nav.tabs a {
+    display: inline-block;
+    text-decoration: none;
+    padding: 20px;
+    color: black;
+    transition: 0.2s;
+}
+
+nav.tabs a:hover {
+    background: #EEE;
+    border-bottom: 2px solid black;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    background-color: orange;
+    border-top: 1px solid black;
 }
