modify HTML and ejs to be more dynamic

--- a/node/views/nav.ejs
+++ b/node/views/nav.ejs
@@ -1,6 +1,6 @@
-<ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="login">Login</a></li>
-    <li>Register</li>
-    <li>About</li>
-</ul>
+<nav class="tabs">
+    <a href="/">Home</a>
+    <a href="/login">Login</a>
+    <a href="/register">Register</a>
+    <a href="#about">About</a>
+</nav>
