--- a/node/views/index.ejs
+++ b/node/views/index.ejs
@@ -6,13 +6,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bree+Serif|Rajdhani|Righteous|Vollkorn" rel="stylesheet">
     <script src="javascripts/jQuery/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
 
 <body>
-    <nav>
+    <header>
     <% if(!logged){ %>
         <%- include('nav') %>
     <% }else { %>
@@ -21,7 +20,7 @@
         <% } if(role ==='admin') {%>
             <%- include('admin/nav') %>
     <% }} %>
-    </nav>
+    </header>
     <main>
     <%- include(page) %>
     </main>
