--- a/node/views/login.ejs
+++ b/node/views/login.ejs
@@ -1,23 +1,16 @@
 <div class="login-form-container">
-    <form id="loginForm" class="login form" method="POST" action="users/login">
-        <header>
-            <h2 class="form-title">Login</h2>
-        </header>
-        <main>
-            <p>
-                <input type="text" name="username" id="l_username" placeholder="Username">
-                <span class="username-msg">Enter your username</span>
-            </p>
-            <p>
-                <input type="password" name="password" id="l_password" placeholder="Password">
-                <p>
-                    <span class="password-msg">Enter your Password</span>
-                </p>
-            </p>
-        </main>
-        <footer>
-            <input type="submit" id="login" value="Login">
-        </footer>
+    <form id="loginForm" class="login form" method="POST" action="/login">
+        <label for="username">Username</label>
+        <div>
+            <input type="text" name="username" id="username" placeholder="Username">
+            <p class="hint username-msg">Enter your username</p>
+        </div>
+        <label for="password">Password</label>
+        <div>
+            <input type="password" name="password" id="password" placeholder="Password">
+            <p class="hint password-msg">Enter your Password</p>
+        </div>
+        <input type="submit" id="login" value="Login">
     </form>
 </div>
 <link rel="stylesheet" type="text/css" href="stylesheets/login.css">
