--- a/node/views/register.ejs
+++ b/node/views/register.ejs
@@ -1,29 +1,21 @@
 <div class="register-form-container">
-    <form id="registerForm" class="register form">
-        <header>
-            <h2 class="form-title">Register</h2>
-        </header>
-        <main>
-            <p>
-                <input type="text" name="username" id="r_username" placeholder="Username">
-                <span class="username-msg">Enter new username</span>
-            </p>
-            <p>
-                <input type="password" name="password" id="r_password" placeholder="Password">
-                <p>
-                    <span class="password-msg">Enter new Password</span>
-                </p>
-            </p>
-            <p>
-                <input type="email" name="email" id="r_email">
-                <p>
-                    <span class="email-msg">Enter new email</span>
-                </p>
-            </p>
-        </main>
-        <footer>
-            <input type="button" id="register" value="Register">
-        </footer>
+    <form id="registerForm" class="register form" method="POST" action="/users/">
+        <label for="email">Email</label>
+        <div>
+            <input type="email" name="email" id="email" placeholder="Email">
+            <p class="hint email-msg">Enter your Email</p>
+        </div>
+        <label for="username">Username</label>
+        <div>
+            <input type="text" name="username" id="username" placeholder="Username">
+            <p class="hint username-msg">Enter your username</p>
+        </div>
+        <label for="password">Password</label>
+        <div>
+            <input type="password" name="password" id="password" placeholder="Password">
+            <p class="hint password-msg">Enter your Password</p>
+        </div>
+        <input type="submit" id="register" value="Register">
     </form>
 </div>
 <link rel="stylesheet" type="text/css" href="stylesheets/register.css">
