--- a/node/views/login.ejs
+++ b/node/views/login.ejs
@@ -1,5 +1,6 @@
 <div class="login-form-container">
     <form id="loginForm" class="login form" method="POST" action="/login">
+        <h2>Login</h2>
         <label for="username">Username</label>
         <div>
             <input type="text" name="username" id="username" placeholder="Username">
