--- a/node/views/user/nav.ejs
+++ b/node/views/user/nav.ejs
@@ -1,2 +1,6 @@
-<div>
-</div>
+<nav class="tabs">
+    <a href="/">Home</a>
+    <a href="/account" class="right">Account</a>
+    <a href="#about" class="right">About</a>
+    <a href="/logout" class="right">Logout</a>
+</nav>
