--- a/node/views/index.ejs
+++ b/node/views/index.ejs
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <script src="javascripts/jQuery/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
@@ -25,7 +26,6 @@
     <%- include(page) %>
     </main>
     <footer>
-    <%= logged %>
         <%- include('footer') %>
     </footer>
 </body>
