--- a/node/public/stylesheets/login.css
+++ b/node/public/stylesheets/login.css
@@ -1,11 +1,47 @@
 #loginForm {
     display: grid;
-    grid-template-columns: 100px 1fr;
-    grid-gap: 5px;
+    grid-template-columns: 80px 220px;
+    grid-gap: 20px;
+    padding: 30px;
+    border: 2px solid black;
+    background: white;
+    box-shadow: 10px 10px 0 0 black;
+    border-radius: 20px;
 }
 
-label {
+#loginForm label {
+    margin-top: 12px;
     grid-column: 1 / 2;
+    /* align-self: right; */
+    text-align: center;
+}
+
+#loginForm div #username,
+#loginForm div #password {
+    background: #caffc6;
+    border-radius: 20px;
+}
+
+#loginForm div #username,
+#loginForm div #password,
+#loginForm #login {
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    border: none;
+    transition: all 0.1s ease-in;
+}
+
+#loginForm div #username:hover,
+#loginForm div #password:hover {
+    transform: scale(1.1);
+}
+
+#loginForm #login {
+    width: 50% !important;
+    justify-self: center;
+    grid-column: auto / span 2;
+    font-size: 20px;
 }
 
 input,
@@ -14,82 +50,21 @@ p {
     grid-column: 2/3;
 }
 
-
-/* :root {
-    --primary-color: #852626;
-    --primary-text-color: white;
-    --border-color: #423c3c;
+.hint {
+    opacity: 0.4;
+    font-size: 10px;
+    margin: 5px;
 }
 
-#loginForm {
-    border-radius: 15px;
-    overflow: hidden;
-    border: 3px solid var(--border-color);
+.error {
+    background: #fdc6c6 url(../img/error.png) no-repeat 98% center;
+    box-shadow: 0 0 5px #FF5252;
+    border-bottom: solid 2px red !important;
+    -webkit-text-fill-color: red !important;
 }
 
-#loginForm header,
-#loginForm footer {
-    padding: 5px 0 5px 0;
-    background-color: var(--primary-color);
-    border-color: var(--border-color);
+.correct {
+    background: #caffc6 url(../img/correct.png) no-repeat 98% center !important;
+    box-shadow: 0 0 5px rgb(97, 255, 82) !important;
+    border-color: rgb(50, 255, 23) !important;
 }
-
-#loginForm header {
-    color: var(--primary-text-color);
-    border-bottom: solid 5px;
-    padding: 10px;
-}
-
-#loginForm main {
-    padding: 10px;
-    font-family: 'Vollkorn', serif;
-    color: black;
-    background-color: white; 
-
-
-} 
-#loginForm main input:not([type^="button"]) {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: 3px solid #ccc;
-    color: black;
-    background: white;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    outline: none; 
-
-
-}
- #loginForm main input:not([type^="button"]):hover {
-    border-bottom: 3px solid #555;
-    transition: 0.5s;
-}
-
-#loginForm main input:not([type^="button"]):focus {
-    border: 3px solid #555;
-    transition: 0.5s;
-}
-
-#loginForm footer {
-    border-top: solid 3px var(--border-color);
-    text-align: right;
-}
-
-#loginForm footer input[type^="submit"] {
-    padding: 10px;
-    outline: none;
-    margin: 5px 10px 5px 5px;
-    border: 1px solid;
-    border-radius: 10px;
-    color: black;
-    background: white;
-}
-
-#loginForm footer input[type^="submit"]:hover {
-    background: #999;
-    transition: 0.2s;
-    color: white;
-    background: green;
-} */
