--- a/node/public/stylesheets/register.css
+++ b/node/public/stylesheets/register.css
@@ -1,12 +1,54 @@
 #registerForm {
     display: grid;
-    grid-template-columns: auto 1fr;
-    grid-gap: 10px;
+    grid-template-columns: 80px 220px;
+    grid-gap: 20px;
+    padding: 30px;
+    border: 2px solid black;
+    background: white;
+    box-shadow: 10px 10px 0 0 black;
+    border-radius: 20px;
 }
 
-label {
+#registerForm label {
+    margin-top: 12px;
     grid-column: 1 / 2;
-    text-align: right;
+    /* align-self: right; */
+    text-align: left;
+}
+
+#registerForm div #username,
+#registerForm div #password,
+#registerForm div #email {
+    background: #caffc6;
+    border-radius: 20px;
+}
+
+#registerForm div #username,
+#registerForm div #password,
+#registerForm div #email,
+#registerForm #register {
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    border: none;
+    transition: all 0.1s ease-in;
+}
+
+#registerForm div #username:hover,
+#registerForm div #password:hover,
+#registerForm div #email:hover {
+    transform: scale(1.1);
+}
+
+#registerForm #register {
+    width: 50% !important;
+    justify-self: center;
+    grid-column: auto / span 2;
+    font-size: 20px;
+}
+
+#registerForm h2 {
+    grid-column: auto / span 2;
 }
 
 input,
@@ -15,153 +57,21 @@ p {
     grid-column: 2/3;
 }
 
-
-/* #registerForm {
-    border-radius: 15px;
-    overflow: hidden;
-    border: 3px solid #423c3c;
+.hint {
+    opacity: 0.4;
+    font-size: 10px;
+    margin: 5px;
 }
 
-#registerForm header,
-#registerForm footer {
-    padding: 5px 0 5px 0;
-    background-color: #852626;
-    border-color: #423c3c;
+.error {
+    background: #fdc6c6 url(../img/error.png) no-repeat 98% center;
+    box-shadow: 0 0 5px #FF5252;
+    border-bottom: solid 2px red !important;
+    -webkit-text-fill-color: red !important;
 }
 
-#registerForm header {
-    color: white;
-    border-bottom: solid 3px;
-    padding: 10px;
+.correct {
+    background: #caffc6 url(../img/correct.png) no-repeat 98% center !important;
+    box-shadow: 0 0 5px rgb(97, 255, 82) !important;
+    border-color: rgb(50, 255, 23) !important;
 }
-
-#registerForm main {
-    padding: 10px;
-    font-family: 'Vollkorn', serif;
-    color: black;
-    background-color: white;
-}
-
-#registerForm main input:not([type^="button"]) {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: 3px solid #ccc;
-    color: black;
-    background: white;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    outline: none;
-}
-
-#registerForm main input:not([type^="button"]):hover {
-    border-bottom: 3px solid #555;
-    transition: 0.5s;
-}
-
-#registerForm main input:not([type^="button"]):focus {
-    border: 3px solid #555;
-    transition: 0.5s;
-}
-
-#registerForm main label {
-    font-weight: 600;
-    font-size: 120%;
-}
-
-#registerForm footer {
-    border-top: solid 3px #423c3c;
-    text-align: right;
-}#registerForm {
-    border-radius: 15px;
-    overflow: hidden;
-    border: 3px solid #423c3c;
-}
-
-#registerForm header,
-#registerForm footer {
-    padding: 5px 0 5px 0;
-    background-color: #852626;
-    border-color: #423c3c;
-}
-
-#registerForm header {
-    color: white;
-    border-bottom: solid 3px;
-    padding: 10px;
-}
-
-#registerForm main {
-    padding: 10px;
-    font-family: 'Vollkorn', serif;
-    color: black;
-    background-color: white;
-}
-
-#registerForm main input:not([type^="button"]) {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: 3px solid #ccc;
-    color: black;
-    background: white;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    outline: none;
-}
-
-#registerForm main input:not([type^="button"]):hover {
-    border-bottom: 3px solid #555;
-    transition: 0.5s;
-}
-
-#registerForm main input:not([type^="button"]):focus {
-    border: 3px solid #555;
-    transition: 0.5s;
-}
-
-#registerForm main label {
-    font-weight: 600;
-    font-size: 120%;
-}
-
-#registerForm footer {
-    border-top: solid 3px #423c3c;
-    text-align: right;
-}
-
-#registerForm footer input[type^="button"] {
-    padding: 10px;
-    outline: none;
-    margin: 5px 10px 5px 5px;
-    border: 1px solid;
-    border-radius: 10px;
-    color: black;
-    background: white;
-}
-
-#registerForm footer input[type^="button"]:hover {
-    background: #999;
-    transition: 0.2s;
-    color: white;
-    background: green;
-}
-
-#registerForm footer input[type^="button"] {
-    padding: 10px;
-    outline: none;
-    margin: 5px 10px 5px 5px;
-    border: 1px solid;
-    border-radius: 10px;
-    color: black;
-    background: white;
-}
-
-#registerForm footer input[type^="button"]:hover {
-    background: #999;
-    transition: 0.2s;
-    color: white;
-    background: green;
-} */
