--- a/node/views/login.ejs
+++ b/node/views/login.ejs
@@ -3,12 +3,12 @@
         <h2>Login</h2>
         <label for="username">Username</label>
         <div>
-            <input type="text" name="username" id="username" placeholder="Username">
+            <input type="text" name="username" id="username" placeholder="Username" required>
             <p class="hint username-msg">Enter your username</p>
         </div>
         <label for="password">Password</label>
         <div>
-            <input type="password" name="password" id="password" placeholder="Password">
+            <input type="password" name="password" id="password" placeholder="Password" required>
             <p class="hint password-msg">Enter your Password</p>
         </div>
         <input type="submit" id="login" value="Login">
