--- a/node/views/register.ejs
+++ b/node/views/register.ejs
@@ -3,17 +3,17 @@
         <h2>Register New Account</h2>
         <label for="email">Email</label>
         <div>
-            <input type="email" name="email" id="email" placeholder="Email">
+            <input type="email" name="email" id="email" placeholder="Email" required>
             <p class="hint email-msg">Enter your Email</p>
         </div>
         <label for="username">Username</label>
         <div>
-            <input type="text" name="username" id="username" placeholder="Username">
+            <input type="text" name="username" id="username" placeholder="Username" required>
             <p class="hint username-msg">Enter your username</p>
         </div>
         <label for="password">Password</label>
         <div>
-            <input type="password" name="password" id="password" placeholder="Password">
+            <input type="password" name="password" id="password" placeholder="Password" required>
             <p class="hint password-msg">Enter your Password</p>
         </div>
         <input type="submit" id="register" value="Register">
