update styling and views

--- a/node/views/error.ejs
+++ b/node/views/error.ejs
@@ -1,26 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<div class="err-body">
+    <h1>Error</h1>
+    <div class="err-msg">
+        <p><%= message %></p>
+    </div>
     <script src="javascripts/error.js"></script>
-
-    <script src="javascripts/jQuery/jquery-3.3.1.min.js"></script>
-    <title>Error</title>
-</head>
-
-<body>
-    <h1>
-        <%= error %>
-    </h1>
-    <main>
-        <p>
-            <%= message %>
-        </p>
-    </main>
-
-</body>
-
-</html>
+</div>
