--- a/node/views/forbidden.ejs
+++ b/node/views/forbidden.ejs
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Forbidden</title>
-</head>
-
-<body>
-    <h1>Forbidden 403</h1>
-    <p>You don't have access to this page, please contact the administrator.</p>
-</body>
-
-</html>
+<div class="forbidden-body">
+    <h1>Forbidden</h1>
+    <div class="forbidden-msg">
+        <p><%= message %></p>
+    </div>
+    <script src="javascripts/error.js"></script>
+</div>
