--- a/node/views/login.ejs
+++ b/node/views/login.ejs
@@ -3,16 +3,16 @@
         <h2>Login</h2>
         <label for="username">Username</label>
         <div>
-            <input type="text" name="username" id="username" placeholder="Username" required>
+            <input type="text" name="username" id="username" placeholder="Username" class="field" required>
             <p class="hint username-msg">Enter your username</p>
         </div>
         <label for="password">Password</label>
         <div>
-            <input type="password" name="password" id="password" placeholder="Password" required>
+            <input type="password" name="password" id="password" placeholder="Password" class="field" required>
             <p class="hint password-msg">Enter your Password</p>
         </div>
-        <input type="submit" id="login" value="Login">
+        <input type="submit" id="login" value="Login" class="btn">
     </form>
 </div>
-<link rel="stylesheet" type="text/css" href="stylesheets/login.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/form.css">
 <script src="javascripts/login.js"></script>
