--- a/node/views/recover.ejs
+++ b/node/views/recover.ejs
@@ -1,14 +1,14 @@
 <div class="recover-form-container">
     <form id="recoverForm" class="recover form" method="POST" action="/recover">
         <h2>Recover password</h2>
-        <p>to Recover your password please enter the email you registered your account with.</p>
+        <p class="form-msg">To recover your password please enter the email you <strong>registered</strong> your account with.</p>
         <label for="email">Email</label>
         <div>
-            <input type="text" name="email" id="email" placeholder="email" required>
+            <input type="text" name="email" id="email" placeholder="email" class="field" required>
             <p class="hint email-msg">Enter your email</p>
         </div>
-        <input type="submit" id="edit" value="Edit">
+        <input type="submit" id="recover" value="Recover" class="btn">
     </form>
 </div>
-<link rel="stylesheet" type="text/css" href="stylesheets/recover.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/form.css">
 <script src="javascripts/recover.js"></script>
