--- a/node/views/register.ejs
+++ b/node/views/register.ejs
@@ -3,21 +3,21 @@
         <h2>Register New Account</h2>
         <label for="email">Email</label>
         <div>
-            <input type="email" name="email" id="email" placeholder="Email" required>
+            <input type="email" name="email" id="email" placeholder="Email" class="field" required>
             <p class="hint email-msg">Enter your Email</p>
         </div>
         <label for="username">Username</label>
         <div>
-            <input type="text" name="username" id="username" placeholder="Username" required>
+            <input type="text" name="username" id="username" placeholder="Username" class="field" required>
             <p class="hint username-msg">Enter your username</p>
         </div>
         <label for="password">Password</label>
         <div>
-            <input type="password" name="password" id="password" placeholder="Password" required>
+            <input type="password" name="password" id="password" placeholder="Password" class="field" required>
             <p class="hint password-msg">Enter your Password</p>
         </div>
-        <input type="submit" id="register" value="Register">
+        <input type="submit" id="register" value="Register" class="btn">
     </form>
 </div>
-<link rel="stylesheet" type="text/css" href="stylesheets/register.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/form.css">
 <script src="javascripts/register.js"></script>
