--- a/node/views/home.ejs
+++ b/node/views/home.ejs
@@ -1,3 +1,6 @@
-<div>
-    <h2>Welcome <%= username %></h2>
+<div class="home-main">
+<article class="home-article">
+<h2>Welcome Stranger</h2>
+This site is made by Abed Al Rahman Murrar as a Task in Asal Technologies using <a href="https://nodejs.org/en/" title="node.js Website">node.js</a>, to explore the site simply <a href="/login">login</a>, if you don't have an account you can <a href="/register">register</a> now.
+</article>
 </div>
