--- a/node/views/index.ejs
+++ b/node/views/index.ejs
@@ -22,7 +22,7 @@
             <%- include('admin/nav') %>
     <% }} %>
     </header>
-    <main>
+    <main class="content">
     <%- include(page) %>
     </main>
     <footer>
