--- a/node/views/login.ejs
+++ b/node/views/login.ejs
@@ -1,6 +1,7 @@
 <div class="login-form-container">
     <form id="loginForm" class="login form" method="POST" action="/login">
         <h2>Login</h2>
+        <div class="msg"></div>
         <label for="username">Username</label>
         <div>
             <input type="text" name="username" id="username" placeholder="Username" class="field" required>
