--- a/node/public/stylesheets/style.css
+++ b/node/public/stylesheets/style.css
@@ -22,10 +22,12 @@ body {
     letter-spacing: -1px;
 }
 
-main {
+.content {
     display: flex;
     justify-content: center;
-    margin-top: 50px
+    margin-top: 50px;
+    margin-bottom: 20px;
+    z-index: 1;
 }
 
 nav.tabs {
@@ -52,10 +54,21 @@ nav.tabs a:hover {
     border-bottom: 2px solid black;
 }
 
-footer {
+.content .home-main .home-article {
+    padding: 30px;
+    border-radius: 30px;
+    background: rgba(255, 255, 255, 0.5);
+}
+
+.content .home-main .home-article h2 {
+    padding-bottom: 20px;
+}
+
+.content~footer {
     display: flex;
     justify-content: center;
     position: fixed;
+    padding: 5px;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -63,4 +76,5 @@ footer {
     overflow: hidden;
     background-color: orange;
     border-top: 1px solid black;
+    z-index: -1;
 }
