--- a/node/views/admin/manage.ejs
+++ b/node/views/admin/manage.ejs
@@ -1,1 +1,17 @@
-list all users in a table with a button that can edit/delete a user for admin
+<div class="users-table">
+    <table>
+        <thead>
+        <tr>
+            <th>id</th>
+            <th>username</th>
+            <th>email</th>
+            <th>role</th>
+            <th>control</th>
+        </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+</div>
+<script src="javascripts/manage.js"></script>
+<link rel="stylesheet" type="text/css" href="stylesheets/manage.css">
