--- a/node/views/register.ejs
+++ b/node/views/register.ejs
@@ -1,6 +1,7 @@
 <div class="register-form-container">
     <form id="registerForm" class="register form" method="POST" action="/users/">
         <h2>Register New Account</h2>
+        <p id="msg"></p>
         <label for="email">Email</label>
         <div>
             <input type="email" name="email" id="email" placeholder="Email" class="field" required>
