--- a/node/public/stylesheets/style.css
+++ b/node/public/stylesheets/style.css
@@ -5,11 +5,10 @@
     font-family: 'Comfortaa', cursive;
 }
 
-
-/* html,
+html,
 body {
     height: 100%;
-} */
+}
 
 body {
     background-image: url("topography.svg"), linear-gradient(110deg, #f93d66, #6d47d9);
