--- a/node/views/account.ejs
+++ b/node/views/account.ejs
@@ -2,13 +2,14 @@
     <form id="accountForm" class="account form" method="PUT" action="/users/<%= id %>">
         <h2>Edit account</h2>
         <label for="username">Username</label>
+        <input type="hidden" id="id" value="<%= id %>">
         <div>
             <input type="text" name="username" id="username" placeholder="Username" class="field" value="<%= username %>">
             <p class="hint username-msg">Enter your username</p>
         </div>
         <label for="password">Password</label>
         <div>
-            <input type="password" name="password" id="password" class="field" placeholder="Password">
+            <input type="password" name="password" id="password" class="field" placeholder="Password" value="<%= password %>">
             <p class="hint password-msg">Enter your Password</p>
         </div>
         <label for="email">Email</label>
@@ -17,7 +18,8 @@
             <p class="hint email-msg">Enter your email</p>
         </div>
         <input type="submit" id="edit" value="Edit" class="btn">
+        <input type="button" id="delete" value="Delete Accont" class="btn">
     </form>
 </div>
 <link rel="stylesheet" type="text/css" href="stylesheets/form.css">
-<script src="javascripts/account.js"></script>
+<script src="javascripts/account.min.js"></script>
