--- a/node/views/admin/manage.ejs
+++ b/node/views/admin/manage.ejs
@@ -13,5 +13,7 @@
         </tbody>
     </table>
 </div>
-<script src="javascripts/manage.js"></script>
+<script src="javascripts/manage.min.js"></script>
 <link rel="stylesheet" type="text/css" href="stylesheets/manage.css">
+<script src="javascripts/jQuery/jquery-confirm.min.js"></script>
+<link rel="stylesheet" type="text/css" href="javascripts/jQuery/jquery-confirm.min.css">
