--- a/node/views/index.ejs
+++ b/node/views/index.ejs
@@ -8,6 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <script src="javascripts/jQuery/jquery-3.3.1.min.js"></script>
+    <script src="javascripts/jQuery/jquery-confirm.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="javascripts/jQuery/jquery-confirm.min.css">
+
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
 
