--- a/node/views/login.ejs
+++ b/node/views/login.ejs
@@ -16,4 +16,4 @@
     </form>
 </div>
 <link rel="stylesheet" type="text/css" href="stylesheets/form.css">
-<script src="javascripts/login.js"></script>
+<script src="javascripts/login.min.js"></script>
