--- a/node/views/recover.ejs
+++ b/node/views/recover.ejs
@@ -11,4 +11,4 @@
     </form>
 </div>
 <link rel="stylesheet" type="text/css" href="stylesheets/form.css">
-<script src="javascripts/recover.js"></script>
+<script src="javascripts/recover.min.js"></script>
