--- a/node/views/register.ejs
+++ b/node/views/register.ejs
@@ -21,4 +21,4 @@
     </form>
 </div>
 <link rel="stylesheet" type="text/css" href="stylesheets/form.css">
-<script src="javascripts/register.js"></script>
+<script src="javascripts/register.min.js"></script>
