--- a/node/views/error.ejs
+++ b/node/views/error.ejs
@@ -1,7 +1,6 @@
-<div class="err-body">
-    <h1>Error</h1>
-    <div class="err-msg">
-        <p><%= message %></p>
-    </div>
-    <script src="javascripts/error.js"></script>
+<div class="home-main">
+<article class="home-article">
+<h2>Error</h2>
+<%= message %>
+</article>
 </div>
