--- a/node/views/forbidden.ejs
+++ b/node/views/forbidden.ejs
@@ -1,7 +1,6 @@
-<div class="forbidden-body">
-    <h1>Forbidden</h1>
-    <div class="forbidden-msg">
-        <p><%= message %></p>
-    </div>
-    <script src="javascripts/error.js"></script>
+<div class="home-main">
+<article class="home-article">
+<h2>Forbidden</h2>
+<%= message %>
+</article>
 </div>
