--- a/node/views/recover.ejs
+++ b/node/views/recover.ejs
@@ -1,6 +1,7 @@
 <div class="recover-form-container">
     <form id="recoverForm" class="recover form" method="POST" action="/recover">
         <h2>Recover password</h2>
+        <p id="msg"></p>
         <p class="form-msg">To recover your password please enter the email you <strong>registered</strong> your account with.</p>
         <label for="email">Email</label>
         <div>
