update views and their directories

--- a/node/views/guest/register.ejs
+++ b/node/views/guest/register.ejs
@@ -20,5 +20,5 @@
         <input type="submit" id="register" value="Register" class="btn">
     </form>
 </div>
-<link rel="stylesheet" type="text/css" href="stylesheets/form.css">
-<script src="javascripts/register.min.js"></script>
+<link rel="stylesheet" type="text/css" href="/stylesheets/form.css">
+<script src="/javascripts/register.min.js"></script>
