--- a/node/views/guest/login.ejs
+++ b/node/views/guest/login.ejs
@@ -15,5 +15,5 @@
         <input type="submit" id="login" value="Login" class="btn">
     </form>
 </div>
-<link rel="stylesheet" type="text/css" href="stylesheets/form.css">
-<script src="javascripts/login.min.js"></script>
+<link rel="stylesheet" type="text/css" href="/stylesheets/form.css">
+<script src="/javascripts/login.min.js"></script>
