--- a/node/views/index.ejs
+++ b/node/views/index.ejs
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
-    <script src="javascripts/jQuery/jquery-3.3.1.min.js"></script>
-    <script src="javascripts/jQuery/jquery-confirm.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="javascripts/jQuery/jquery-confirm.min.css">
+    <script src="/javascripts/jQuery/jquery-3.3.1.min.js"></script>
+    <script src="/javascripts/jQuery/jquery-confirm.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/javascripts/jQuery/jquery-confirm.min.css">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 </head>
 
 <body>
     <header>
     <% if(!logged){ %>
-        <%- include('nav') %>
+        <%- include('guest/nav') %>
     <% }else { %>
         <% if(role ==='client'){ %>
             <%- include('user/nav') %>
