--- a/node/views/user/recover.ejs
+++ b/node/views/user/recover.ejs
@@ -11,5 +11,5 @@
         <input type="submit" id="recover" value="Recover" class="btn">
     </form>
 </div>
-<link rel="stylesheet" type="text/css" href="stylesheets/form.css">
-<script src="javascripts/recover.min.js"></script>
+<link rel="stylesheet" type="text/css" href="/stylesheets/form.css">
+<script src="/javascripts/recover.min.js"></script>
