--- a/node/views/admin/nav.ejs
+++ b/node/views/admin/nav.ejs
@@ -2,6 +2,6 @@
     <a href="/">Home</a>
     <a href="/manage">Users</a>
     <a href="/logout" class="right">Logout</a>
-    <a href="#about" class="right">About</a>
+    <a href="/about" class="right">About</a>
     <a href="/account" class="right">Account</a>
 </nav>
