--- a/node/views/guest/login.ejs
+++ b/node/views/guest/login.ejs
@@ -1,7 +1,7 @@
 <div class="login-form-container">
     <form id="loginForm" class="login form" method="POST" action="/login">
         <h2>Login</h2>
-        <div class="msg"></div>
+        <p class="msg"></p>
         <label for="username">Username</label>
         <div>
             <input type="text" name="username" id="username" placeholder="Username" class="field" required>
@@ -13,6 +13,7 @@
             <p class="hint password-msg">Enter your Password</p>
         </div>
         <input type="submit" id="login" value="Login" class="btn">
+        <a href="/recover">Forgot password?</a>
     </form>
 </div>
 <link rel="stylesheet" type="text/css" href="/stylesheets/form.css">
