--- a/node/views/guest/nav.ejs
+++ b/node/views/guest/nav.ejs
@@ -2,5 +2,5 @@
     <a href="/">Home</a>
     <a href="/login">Login</a>
     <a href="/register">Register</a>
-    <a href="#about" class="right">About</a>
+    <a href="/about" class="right">About</a>
 </nav>
