--- a/node/views/user/recover.ejs
+++ b/node/views/user/recover.ejs
@@ -1,8 +1,9 @@
 <div class="recover-form-container">
     <form id="recoverForm" class="recover form" method="POST" action="/recover">
         <h2>Recover password</h2>
-        <p id="msg"></p>
-        <p class="form-msg">To recover your password please enter the email you <strong>registered</strong> your account with.</p>
+        <p id="msg" class="error-hint"><%= (typeof msg != 'undefined')?msg:'' %></p>
+        <p class="form-msg">To recover your password please enter the email you
+            <strong>registered</strong> your account with.</p>
         <label for="email">Email</label>
         <div>
             <input type="text" name="email" id="email" placeholder="email" class="field" required>
