--- a/node/views/user/reset.ejs
+++ b/node/views/user/reset.ejs
@@ -5,7 +5,7 @@
         <label for="password">Password</label>
         <div>
             <input type="hidden" name="token" id="token" value="<%= token %>">
-            <input type="text" name="password" id="password" placeholder="Password" class="field" required>
+            <input type="password" name="password" id="password" placeholder="Password" class="field" required>
             <p class="hint password-msg">Enter your new password</p>
         </div>
         <label for="confirmPassword">Confirm Password</label>
