--- a/node/public/stylesheets/manage.css
+++ b/node/public/stylesheets/manage.css
@@ -5,12 +5,34 @@ th {
 
 th,
 td {
-    border: 0.125em solid #333;
+    border: 0.125em solid black;
     line-height: 1.5;
     padding: 0.75em;
-    text-align: left;
+    text-align: center;
+
+}
+
+table tbody tr:nth-child(even){
+    background: #EEE;
+}
+
+table tbody tr:hover{
+    background: burlywood;
+}
+
+table button{
+    padding: 7px;
+    border:none;
+    outline: none;
+    color: white;
+    background: red;
 }
 
 table {
-    background: sandybrown;
+    padding: 0px;
+    border: 2px solid black;
+    background: white;
+    border-radius: 5px;
+    transition: all 0.2s;
+    overflow: hidden;
 }
