--- a/node/public/stylesheets/css.css
+++ b/node/public/stylesheets/css.css
@@ -1,3 +1,68 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Comfortaa', cursive;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    background-image: url("topography.svg"), linear-gradient(110deg, #f93d66, #6d47d9);
+    background-size: 340px, auto;
+    background-attachment: fixed;
+    /* min-height: calc(100vh - 60px); */
+    margin: 20px;
+    /* background: white; */
+    background-position: fixed;
+    letter-spacing: -1px;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    z-index: 1;
+}
+
+nav.tabs {
+    display: block;
+    background: white;
+    box-shadow: 0px -2px 35px black;
+    height: 60px;
+}
+
+nav.tabs a {
+    display: inline-block;
+    text-decoration: none;
+    padding: 20px;
+    color: black;
+    transition: 0.2s;
+}
+
+nav.tabs a.right {
+    float: right;
+}
+
+nav.tabs a:hover {
+    background: #EEE;
+    border-bottom: 2px solid black;
+}
+
+.content .home-main .home-article {
+    padding: 30px;
+    border-radius: 30px;
+    background: rgba(255, 255, 255, 0.5);
+}
+
+.content .home-main .home-article h2 {
+    padding-bottom: 20px;
+}
+
 .form {
     display: grid;
     grid-template-columns: 80px 220px;
@@ -10,7 +75,8 @@
     transition: all 0.2s;
 }
 
-.form>p, .form>a {
+.form>p,
+.form>a {
     word-wrap: break-word;
     grid-column: span 2;
     text-align: center;
@@ -72,7 +138,6 @@
     box-shadow: none;
 }
 
-
 /* input,
 button,
 p {
@@ -117,4 +182,42 @@ p {
 .correct-hint {
     opacity: 1.0 !important;
     color: green;
+}
+
+th {
+    background-color: #eee;
+    font-weight: bold;
+}
+
+th,
+td {
+    border: 0.125em solid black;
+    line-height: 1.5;
+    padding: 0.75em;
+    text-align: center;
+}
+
+table tbody tr:nth-child(even) {
+    background: #EEE;
+}
+
+table tbody tr:hover {
+    background: burlywood;
+}
+
+table button {
+    padding: 7px;
+    border: none;
+    outline: none;
+    color: white;
+    background: red;
+}
+
+table {
+    padding: 0px;
+    border: 2px solid black;
+    background: white;
+    border-radius: 5px;
+    transition: all 0.2s;
+    overflow: hidden;
 }
