--- a/node/views/guest/nav.ejs
+++ b/node/views/guest/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="tabs">
-    <a href="/">Home</a>
-    <a href="/login">Login</a>
-    <a href="/register">Register</a>
-    <a href="/about" class="right">About</a>
+    <a href="/" id="_home">Home</a>
+    <a href="/login" id="_login">Login</a>
+    <a href="/register" id="_register">Register</a>
+    <a href="/about" id="_about" class="right">About</a>
 </nav>
