--- a/node/views/index.ejs
+++ b/node/views/index.ejs
@@ -9,9 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
     <script src="/javascripts/jQuery/jquery-3.3.1.min.js"></script>
     <script src="/javascripts/jQuery/jquery-confirm.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/javascripts/jQuery/jquery-confirm.min.css">
-
-    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+    <script src="/javascripts/main.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/jquery-confirm.min.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/css.min.css">
 </head>
 
 <body>
@@ -28,7 +28,6 @@
     <main class="content">
     <%- include(page) %>
     </main>
-
 </body>
 
 </html>
