--- a/node/views/admin/manage.ejs
+++ b/node/views/admin/manage.ejs
@@ -1,19 +1,18 @@
 <div class="users-table">
     <table>
         <thead>
-        <tr>
-            <th>id</th>
-            <th>username</th>
-            <th>email</th>
-            <th>role</th>
-            <th>control</th>
-        </tr>
+            <tr>
+                <th>id</th>
+                <th>username</th>
+                <th>email</th>
+                <th>role</th>
+                <th>control</th>
+            </tr>
         </thead>
         <tbody>
         </tbody>
     </table>
 </div>
-<script src="/javascripts/manage.min.js"></script>
-<link rel="stylesheet" type="text/css" href="/stylesheets/manage.css">
-<script src="/javascripts/jQuery/jquery-confirm.min.js"></script>
-<link rel="stylesheet" type="text/css" href="/javascripts/jQuery/jquery-confirm.min.css">
+<script>
+    getUsers()
+</script>
