--- a/node/views/admin/nav.ejs
+++ b/node/views/admin/nav.ejs
@@ -1,7 +1,7 @@
 <nav class="tabs">
-    <a href="/">Home</a>
-    <a href="/manage">Users</a>
+    <a href="/" id="_home">Home</a>
+    <a href="/manage" id="_manage">Users</a>
     <a href="/logout" class="right">Logout</a>
-    <a href="/about" class="right">About</a>
-    <a href="/account" class="right">Account</a>
+    <a href="/about" id="_about" class="right">About</a>
+    <a href="/account" id="_account" class="right">Account</a>
 </nav>
