--- a/node/views/user/nav.ejs
+++ b/node/views/user/nav.ejs
@@ -1,6 +1,6 @@
 <nav class="tabs">
-    <a href="/">Home</a>
+    <a href="/" id="_home">Home</a>
     <a href="/logout" class="right">Logout</a>
-    <a href="/about" class="right">About</a>
-    <a href="/account" class="right">Account</a>
+    <a href="/about" id="_about" class="right">About</a>
+    <a href="/account" id="_account" class="right">Account</a>
 </nav>
