update views and add css queries to make responsive website

--- a/node/views/guest/login.ejs
+++ b/node/views/guest/login.ejs
@@ -1,4 +1,4 @@
-<div class="login-form-container">
+<div class="container">
     <form id="loginForm" class="login form" method="POST" action="/login">
         <h2>Login</h2>
         <p class="msg"></p>
