--- a/node/views/guest/register.ejs
+++ b/node/views/guest/register.ejs
@@ -1,4 +1,4 @@
-<div class="register-form-container">
+<div class="container">
     <form id="registerForm" class="register form" method="POST" action="/users/">
         <h2>Register New Account</h2>
         <p id="msg"></p>
