--- a/node/views/user/account.ejs
+++ b/node/views/user/account.ejs
@@ -1,4 +1,4 @@
-<div class="account-form-container">
+<div class="container">
     <form id="accountForm" class="account form" method="PUT" action="/users/<%= id %>">
         <h2>Edit account</h2>
         <label for="username">Username</label>
