--- a/node/views/user/recover.ejs
+++ b/node/views/user/recover.ejs
@@ -1,4 +1,4 @@
-<div class="recover-form-container">
+<div class="container">
     <form id="recoverForm" class="recover form" method="POST" action="/recover">
         <h2>Recover password</h2>
         <p id="msg" class="error-hint"><%= (typeof msg != 'undefined')?msg:'' %></p>
