--- a/node/public/stylesheets/css.css
+++ b/node/public/stylesheets/css.css
@@ -1,3 +1,5 @@
+/* ALL */
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -10,31 +12,15 @@ body {
     height: 100%;
 }
 
-body {
-    background-image: url("topography.svg"), linear-gradient(110deg, #f93d66, #6d47d9);
-    background-size: 340px, auto;
-    background-attachment: fixed;
-    /* min-height: calc(100vh - 60px); */
-    margin: 20px;
-    /* background: white; */
-    background-position: fixed;
-    letter-spacing: -1px;
-}
-
-.content {
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    z-index: 1;
-}
+/* NAVBAR */
 
 nav.tabs {
-    display: block;
     background: white;
     box-shadow: 0px -2px 35px black;
     height: 60px;
 }
+
+/* NAVBAR BUTTONS */
 
 nav.tabs a {
     display: inline-block;
@@ -44,13 +30,23 @@ nav.tabs a {
     transition: 0.2s;
 }
 
-nav.tabs a.right {
-    float: right;
+.form {
+    display: grid;
+    grid-gap: 20px;
+    padding: 30px;
+    border: 2px solid black;
+    background: white;
+    border-radius: 20px;
+    grid-template-columns: 1fr;
 }
 
 nav.tabs a:hover {
     background: #EEE;
-    border-bottom: 2px solid black;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
 }
 
 .content .home-main .home-article {
@@ -59,32 +55,15 @@ nav.tabs a:hover {
     background: rgba(255, 255, 255, 0.5);
 }
 
-.content .home-main .home-article h2 {
-    padding-bottom: 20px;
-}
-
-.form {
-    display: grid;
-    grid-template-columns: 80px 220px;
-    /* grid-template-columns: repeat(auto-fit); */
-    grid-gap: 20px;
-    padding: 30px;
-    border: 2px solid black;
-    background: white;
-    border-radius: 20px;
-    transition: all 0.2s;
+.form label {
+    font-weight: 600;
 }
 
 .form>p,
 .form>a {
     word-wrap: break-word;
-    grid-column: span 2;
     text-align: center;
-}
-
-.form:hover {
-    box-shadow: 10px 10px 0 0 black;
-    transform: translate3d(-5px, -5px, -5px);
+    grid-column: auto;
 }
 
 .form input {
@@ -92,15 +71,6 @@ nav.tabs a:hover {
     padding: 10px;
     outline: none;
     border: none;
-    transition: all 0.1s ease-in;
-}
-
-.form label {
-    margin-top: 12px;
-    grid-column: 1 / 2;
-    font-weight: 600;
-    /* align-self: right; */
-    text-align: right;
 }
 
 .form div .field {
@@ -110,23 +80,11 @@ nav.tabs a:hover {
     color: black;
 }
 
-.form div .field:hover {
-    transform: scale(1.1);
-}
-
-.form div .field:focus {
-    border-bottom-color: blue;
-    transition: 1s ease;
-    transform: initial;
-    /* transform: scale(1.1); */
-}
-
 .form .btn {
     width: 50% !important;
     justify-self: center;
     background-color: rgb(221, 221, 221);
     color: black;
-    grid-column: auto / span 2;
     font-size: 20px;
     border-radius: 15px;
     box-shadow: 0 3px 0 0 black;
@@ -138,24 +96,10 @@ nav.tabs a:hover {
     box-shadow: none;
 }
 
-/* input,
-button,
-p {
-    grid-column: 2/3;
-} */
-
-.form h2 {
-    grid-column: auto / span 2;
-}
-
 .form .hint {
     opacity: 0.4;
     font-size: 10px;
     margin: 5px;
-}
-
-.form .form-msg {
-    grid-column: span 2;
 }
 
 .error,
@@ -220,4 +164,124 @@ table {
     border-radius: 5px;
     transition: all 0.2s;
     overflow: hidden;
+}
+
+@media (min-width: 768px) {
+    /* DESKTOP */
+    body {
+        background-image: url("topography.svg"), linear-gradient(110deg, #f93d66, #6d47d9);
+        background-size: 340px, auto;
+        background-attachment: fixed;
+        margin: 20px;
+        background-position: fixed;
+        letter-spacing: -1px;
+    }
+    nav.tabs {
+        display: flex;
+    }
+    nav.tabs a:hover {
+        border-bottom: 2px solid black;
+    }
+    nav.tabs a#nav-show {
+        display: none;
+    }
+    nav.tabs a.right {
+        margin-left: auto;
+    }
+    .content {
+        margin-top: 50px;
+    }
+    .content .home-main .home-article h2 {
+        padding-bottom: 20px;
+    }
+    .form {
+        grid-template-columns: 80px 220px;
+        transition: all 0.2s;
+    }
+    .form>p,
+    .form>a {
+        word-wrap: break-word;
+        text-align: center;
+        grid-column: span 2;
+    }
+    .form:hover {
+        box-shadow: 10px 10px 0 0 black;
+        transform: translate3d(-5px, -5px, -5px);
+    }
+    .form input {
+        transition: all 0.1s ease-in;
+    }
+    .form label {
+        margin-top: 12px;
+        grid-column: 1 / 2;
+        text-align: right;
+    }
+    .form div .field:hover {
+        transform: scale(1.1);
+    }
+    .form div .field:focus {
+        border-bottom-color: blue;
+        transition: 1s ease;
+        transform: initial;
+    }
+    .form h2 {
+        grid-column: auto / span 2;
+    }
+    .form .btn {
+        grid-column: auto / span 2;
+    }
+    .form .form-msg {
+        grid-column: span 2;
+    }
+    /* DESKTOP */
+}
+
+@media (max-width: 767px) {
+    /* Phone */
+    body {
+        margin: 0;
+    }
+    header {
+        z-index: 7;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+    }
+    nav.tabs {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        overflow: hidden;
+        max-height: 100%;
+        text-align: center;
+    }
+    nav.tabs.collapse-nav {
+        height: auto;
+        max-height: auto;
+    }
+    nav.tabs a.right {
+        margin: 0;
+    }
+    nav.tabs a:first-child,
+    nav.tabs a:nth-child(2) {
+        grid-column: span 1;
+    }
+    nav.tabs a {
+        grid-column: auto / span 2;
+    }
+    nav a#nav-show {
+        display: inline-block;
+    }
+    .content .container {
+        width: 90%;
+        margin-top: 100px;
+        margin-bottom: 20px;
+        overflow-x: scroll;
+    }
+    .form label {
+        grid-column: 1;
+    }
+    .form>div {
+        grid-column: 1;
+    }
 }
