--- a/node/views/admin/nav.ejs
+++ b/node/views/admin/nav.ejs
@@ -1,7 +1,8 @@
 <nav class="tabs">
     <a href="/" id="_home">Home</a>
+    <a href="javascript:void(0)" id="nav-show"><i class="fas fa-angle-double-down"></i></a>
     <a href="/manage" id="_manage">Users</a>
-    <a href="/logout" class="right">Logout</a>
-    <a href="/about" id="_about" class="right">About</a>
     <a href="/account" id="_account" class="right">Account</a>
+    <a href="/about" id="_about">About</a>
+    <a href="/logout">Logout</a>
 </nav>
