--- a/node/views/handle/forbidden.ejs
+++ b/node/views/handle/forbidden.ejs
@@ -1,6 +1,8 @@
-<div class="home-main">
-    <article class="home-article">
-        <h2>Forbidden</h2>
-    <%= message %>
-    </article>
+<div class="container">
+    <div class="home-main">
+        <article class="home-article">
+            <h2>Forbidden</h2>
+        <%= message %>
+        </article>
+    </div>
 </div>
