--- a/node/views/user/reset.ejs
+++ b/node/views/user/reset.ejs
@@ -1,4 +1,4 @@
-<div class="reset-form-container">
+<div class="container">
     <form id="resetForm" class="reset form" method="PUT" action="/reset">
         <h2>reset password</h2>
         <p id="msg"></p>
