print stacktrace for development

--- a/node/views/handle/error.ejs
+++ b/node/views/handle/error.ejs
@@ -3,6 +3,7 @@
         <article class="home-article">
             <h2>Error</h2>
         <%= message %>
+        <%= typeof stacktrace !=='undefined' ? stacktrace : '' %>
         </article>
     </div>
 </div>
